--- a/src/app/builder/question-dialog.component.scss
+++ b/src/app/builder/question-dialog.component.scss
@@ -1,22 +1,11 @@
 .question-dialog {
-  width: 720px;
-  max-width: 95vw;
-  height: 85vh;
-  max-height: 85vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background: var(--surface, #ffffff);
-  border-radius: 16px;
+  border-radius: 12px;
   overflow: hidden;
-
-  @media (min-width: 1200px) {
-    width: 780px;
-  }
-
-  @media (min-width: 1600px) {
-    width: 850px;
-    height: 80vh;
-  }
 }
 
 // Header
@@ -195,6 +184,14 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
+
+  @media (min-width: 700px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (min-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .type-card {
